--- a/package.json
+++ b/package.json
@@ -7,14 +7,22 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "DanyloSus",
   "license": "ISC",
-  "description": "",
+  "description": "A group of scripts that helps with Module ARCHitecture",
   "dependencies": {
     "chalk": "^5.3.0",
     "commander": "^12.1.0"
   },
   "bin": {
-    "march": "./march.js"
-  }
+    "march": "march.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DanyloSus/march.git"
+  },
+  "bugs": {
+    "url": "https://github.com/DanyloSus/march/issues"
+  },
+  "homepage": "https://github.com/DanyloSus/march#readme"
 }
