--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "commonjs",
     "target": "ES6",
     "declaration": true,
-    "strict": true
+    "strict": true,
   },
   "include": ["src/**/*"]
 }
