--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.2",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && tsc-alias && npm link",
     "test": "jest --watch"
   },
   "keywords": [],
@@ -37,6 +38,7 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.10",
     "typescript": "^5.7.3"
   },
   "compilerOptions": {
