fix: fix creation of modules and refactor pages and add its tests

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "types": "dist/index.d.ts",
   "type": "module",
   "scripts": {
-    "build": "tsc && tsc-alias && npm link",
+    "build": "tsc -w",
     "test": "jest --watch"
   },
   "keywords": [],
