feat: add configuration for icons march and handle this settings while icon creation

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "types": "dist/index.d.ts",
   "type": "module",
   "scripts": {
-    "build": "tsc -w",
+    "dev": "tsc -w",
+    "build": "tsc",
     "test": "jest --watch"
   },
   "keywords": [],
