--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
-    "inquirer": "^12.4.2"
+    "inquirer": "^12.4.2",
+    "ora": "^8.2.0"
   },
   "bin": {
     "march": "dist/index.js"
